improvement: DTO patterns