@@ -4,7 +4,6 @@ import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import com.example.demo.domain.User;
 
@@ -22,102 +21,46 @@ public class UserDTO implements Serializable {
 	private List<String> likedPostsId = new ArrayList<>();
 	private List<String> followersId = new ArrayList<>();
 	private List<String> followingId = new ArrayList<>();
+	private List<String> likedCommentsId = new ArrayList<>();
 	
 	public UserDTO() {
 	}
 	
 	public UserDTO(User obj) {
-		id = obj.getId();
-		name = obj.getUserName();
-		email = obj.getEmail();
-		setPassword(obj.getPassword());
-		setImgUrl(obj.getImgUrl());
-		setDescription(obj.getDescription());
-		setBirthDate(obj.getBirthDate());
-		setLikedPostsId(obj.getlikedPosts().stream().map(x -> x.getId()).collect(Collectors.toList()));
-		setFollowersId(obj.getFollowers().stream().map(x -> x.getId()).collect(Collectors.toList()));
-		setFollowingId(obj.getFollowing().stream().map(x -> x.getId()).collect(Collectors.toList()));
+		this.id = obj.getId();
+		this.name = obj.getUserName();
+		this.email = obj.getEmail();
+		this.password = obj.getPassword();
+		this.imgUrl = obj.getImgUrl();
+		this.description = obj.getDescription();
+		this.birthDate = obj.getBirthDate();
+		this.likedPostsId = obj.getlikedPosts().stream().map(x -> x.getId()).toList();
+		this.followersId = obj.getFollowers().stream().map(x -> x.getId()).toList();
+		this.followingId = obj.getFollowing().stream().map(x -> x.getId()).toList();
+		this.likedCommentsId = obj.getLikedComments().stream().map(x -> x.getId()).toList();
 	}
 
-	public String getId() {
-		return id;
-	}
+	public String getId() { return id; }
 
-	public void setId(String id) {
-		this.id = id;
-	}
+	public String getName() { return name; }
 
-	public String getName() {
-		return name;
-	}
+	public String getEmail() { return email; }
 
-	public void setName(String name) {
-		this.name = name;
-	}
+	public String getPassword() { return password; }
 
-	public String getEmail() {
-		return email;
-	}
-
-	public void setEmail(String email) {
-		this.email = email;
-	}
-
-	public String getPassword() {
-		return password;
-	}
-
-	public void setPassword(String password) {
-		this.password = password;
-	}
-
-	public String getImgUrl() {
-		return imgUrl;
-	}
-
-	public void setImgUrl(String imgUrl) {
-		this.imgUrl = imgUrl;
-	}
+	public String getImgUrl() { return imgUrl; }
 	
-	public String getDescription() {
-		return description;
-	}
-
-	public void setDescription(String description) {
-		this.description = description;
-	}
+	public String getDescription() { return description; }
 	
-	public String getBirthDate() {
-		return birthDate;
-	}
+	public String getBirthDate() { return birthDate; }
 
-	public void setBirthDate(String birthDate) {
-		this.birthDate = birthDate;
-	}
+	public List<String> getLikedPostsId() { return likedPostsId; }
 
-	public List<String> getLikedPostsId() {
-		return likedPostsId;
-	}
+	public List<String> getFollowersId() { return followersId; }
 
-	public void setLikedPostsId(List<String> likedPostsId) {
-		this.likedPostsId = likedPostsId;
-	}
+	public List<String> getFollowingId() { return followingId; }
 
-	public List<String> getFollowersId() {
-		return followersId;
-	}
-
-	public void setFollowersId(List<String> followersId) {
-		this.followersId = followersId;
-	}
-
-	public List<String> getFollowingId() {
-		return followingId;
-	}
-
-	public void setFollowingId(List<String> followingId) {
-		this.followingId = followingId;
-	}
+	public List<String> getLikedCommentsId() { return likedCommentsId; }
 
 	@Override
 	public int hashCode() {
